force-app/main/default/objects/LLC_BI__Loan_Covenant__c/fields/LLC_BI__Covenant2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant2__c</fullName>
    <description>This field is required and is automatically populated. It identifies the Covenant Mgmt record associated with the Loan Covenant record.</description>
    <label>Covenant2</label>
    <referenceTo>LLC_BI__Covenant2__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loan_Covenants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>