force-app/main/default/objects/LLC_BI__Loan_Covenant__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <description>This field is required. It is automatically populated when a Covenant is created from the loan. It identifies the loan record associated with the Loan Covenant record.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Covenants</relationshipLabel>
    <relationshipName>Loan_Covenants</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>